compiler/src/test/resources/amyc/typer/failing/FunctionCalls2.amy
object FunctionCall
  fn foo(i: Int): Boolean = { i < 0 }
  
  val x: Int = foo(1); x
end FunctionCall
